# crb

./: .gitignore  CRB_EXPERIMENT_SETUP.md  README.md  README_CRB.md  configs  data  environment.yml  pyproject.toml  requirements.txt  scripts  tests
Legacy/: README.md
Legacy/configs/: mock_mmlu_multiturn_oracle.yaml  mock_mmlu_multiturn_oracle_constrained_nothink.yaml  mock_mmlu_multiturn_wrong_history.yaml  mock_mmlu_single_turn_pool.yaml  model_pool_registry.yaml  qwen3_1p7b_aime_multiturn_oracle_same_k2_thinking_off_gpu7_offline_smoke_20260311.yaml  qwen3_1p7b_aime_multiturn_oracle_same_k2_thinking_off_minirun.yaml  qwen3_1p7b_gpqa_multiturn_oracle_same_k2_thinking_off.yaml  qwen3_1p7b_gpqa_multiturn_oracle_same_k2_thinking_off_gpu4_smoke_20260311.yaml  (+10 more)
analysis/: .gitignore  README.md
configs/: mock_gsm8k_flattened_self.yaml  mock_mmlu_multiturn_oracle.yaml  qwen25_1p5b_gsm8k_flattened_self_k2.yaml  qwen25_1p5b_mmlu_multiturn_oracle_k2.yaml  qwen3_1p7b_aime_multiturn_oracle_same_k2_thinking_off.yaml  qwen3_1p7b_gpqa_multiturn_oracle_same_k2_thinking_off.yaml  qwen3_1p7b_gpqa_multiturn_oracle_same_k2_thinking_on.yaml  qwen3_1p7b_gsm8k_flattened_self_cross_k2_thinking_off.yaml  qwen3_1p7b_gsm8k_flattened_self_cross_k2_thinking_on.yaml
docs/: ANALYSIS.md  CLAIM_PROTOCOL_ALIGNMENT_20260320.md  CONTINUATION_AUDIT_20260316.md  CRB_EXPERIMENT_SETUP_LONGFORM_ARCHIVE_20260311.md  DATA_STATUS.md  EXECUTION_STATUS.md  LEGACY_NOTES.md  OPERATOR_NEXT_STEPS.md  PIPELINE_STATUS.md  RESULTS_LOG.md  TODO_NEXT.md  VERIFICATION_LOG.md  WORKFLOW_ANALYSIS.md
research/: README.md  directions.md  methodology_extensions.md  related_work_buckets.md
scripts/: aggregate_preliminary_results.py  create_conda_env.sh  materialize_qwen3_core_sweep.sh  run_batch.sh  run_multi_gpu.sh  run_single_gpu.sh
src/: crb
tests/: test_datasets_and_metadata.py  test_parsers.py  test_pipeline_mock.py
tools/: README.md  __init__.py  _artifact_utils.py  aggregate_results.py  bucket_errors.py  build_tables.py  plot_results.py
(+507 files in other folders)
