[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crb-benchmark"
version = "0.1.0"
description = "Conversation-Accumulated / Multi-Turn Interference Benchmark"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "CRB Experiment Pipeline" }
]
dependencies = [
  "datasets>=2.21.0,<3.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "transformers>=4.51.0,<5.0.0",
  "vllm>=0.11.1,<0.12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0"
]

[project.scripts]
crb-eval = "crb.cli.run_eval:main"
crb-pack = "crb.cli.generate_pack:main"
crb-batch = "crb.cli.run_batch:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = ["tests"]
